--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
     "react-smooth-dnd": "^0.11.1"
   }
