--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     ]
   },
   "devDependencies": {
+    "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
+    "react-bootstrap": "^2.1.2",
     "react-smooth-dnd": "^0.11.1"
   }
 }
