--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "html-react-parser": "^1.4.8",
     "lodash": "^4.17.21",
     "react-bootstrap": "^2.1.2",
     "react-smooth-dnd": "^0.11.1"
